Create grid with JavaScript

--- a/style.css
+++ b/style.css
@@ -1,20 +1,29 @@
+*{
+  box-sizing: border-box;
+}
+
+body,
+html{
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+}
+
+body{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 .grid{
   display: flex;
-  /* justify-content: space-between; */
-  /* align-items:center; */
   flex-wrap: wrap;
-
-  width: 100px;
-  height: 100px;
-
-  margin-left: auto;
-  margin-right: auto;
-
-  border: 1px solid black;
+  width: 500px;
+  height: 500px;
+  /* border: 1px solid black; */
 }
 
 .grid > div{
-  flex: auto;
-
   border: 1px solid black;
 }
