--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ html{
   min-height: 100vh;
 }
 
+html{
+  background: #e6e6e6;
+}
+
 body{
   display: flex;
   flex-direction: column;
@@ -26,4 +30,54 @@ body{
 
 .grid > div{
   border: 1px solid black;
+}
+
+.menu{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.slidecontainer {
+  min-width: 150px;
+  /* border: 1px solid black */
+  /* Width of the outside container */
+}
+
+/* The slider itself */
+.slider {
+  -webkit-appearance: none;
+  width: 200px;
+  height: 10px;
+  border-radius: 10px;
+  border: 1px solid black;
+  background: white;
+  outline: none;
+  opacity: 1;
+}
+
+/* Chrome, etc. */
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: black;
+  cursor: pointer;
+}
+
+/* Firefox */
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #04AA6D;
+  cursor: pointer;
+}
+
+.sliderValue{
+  text-align: center;
+  margin-top: 5px;
+  font-size: x-large;
 }
