--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
 }
 
 body,
-html{
+html,
+.middleContainer{
   margin: 0;
   padding: 0;
   min-height: 100vh;
@@ -13,11 +14,12 @@ html{
   background: #e6e6e6;
 }
 
-body{
+.middleContainer{
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  gap: 20px;
 }
 
 .grid{
@@ -25,21 +27,15 @@ body{
   flex-wrap: wrap;
   width: 500px;
   height: 500px;
-  /* border: 1px solid black; */
+  border: 1px solid black;
 }
 
 .grid > div{
   border: 1px solid black;
 }
 
-.menu{
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.slidecontainer {
-  min-width: 150px;
+.slidercontainer {
+  width: 300px;
   /* border: 1px solid black */
   /* Width of the outside container */
 }
@@ -47,13 +43,11 @@ body{
 /* The slider itself */
 .slider {
   -webkit-appearance: none;
-  width: 200px;
+  width: 100%;
   height: 10px;
   border-radius: 10px;
   border: 1px solid black;
   background: white;
-  outline: none;
-  opacity: 1;
 }
 
 /* Chrome, etc. */
@@ -72,7 +66,7 @@ body{
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  background: #04AA6D;
+  background: black;
   cursor: pointer;
 }
 
