--- a/style.css
+++ b/style.css
@@ -86,18 +86,68 @@ html{
 }
 
 .leftMenu{
-  width: 50px;
-  height: 200px;
+  width: 200px;
+  height: 500px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-end;
 
   border: 1px solid black;
 }
 
 .rightMenu{
-  width: 50px;
+  width: 200px;
+  height: 500px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 50px;
 
   border: 1px solid black;
+}
+
+.rightMenu > div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 50px;
+  border: 2px solid black;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.rightMenu > div:hover {
+  scale: 1.05;
+}
+
+
+.colorMenu{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  
+}
+
+.colorPickerContainer{
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  border: 2px solid black;
+  overflow: hidden;
+}
+
+.colorPickerContainer > input[type="color"]{
+  opacity: 1;
+  width: 160px;
+  height: 160px;
+  /* background: #FFFFFF 0% 0% no-repeat padding-box; */
+  box-shadow: 0px 3px 6px #0000001A;
+  padding: 0;
+  margin: -30px 0 0 -30px;
 }
