--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@ html{
   background: #e6e6e6;
 }
 
+.title{
+  font-size: xx-large;
+  font-weight: bold;
+  padding: 0;
+  margin: 0;
+}
+
 .middleContainer{
   display: flex;
   flex-direction: column;
@@ -130,7 +137,7 @@ html{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 10px;
   
 }
 
